top navbar aligns, bottom needs fixing, dropdown needs minor adjustments

--- a/admin/css/BJC.css
+++ b/admin/css/BJC.css
@@ -23,9 +23,10 @@ a:visited {color:#36BBCE;}
 html {
   font-size: 1em; /* Fix for weird bootstrap */
 }
+
 body {
-    font-family: "Lucida Grande", "Lucida San Unicode", "Gill Sans", Helvetica, Arial;
-    font-size: 100%;
+    font-family: Helvetica, "Lucida Grande", "Lucida San Unicode", "Gill Sans", Arial;
+    font-size: 1em;
     text-align: left;
     background-color: #FFF;
     margin: 0;
@@ -81,11 +82,6 @@ p.right {text-align:right;}
     color:#0000CC;
 }
 
-.help {
-    color:#DC143C;
-    font-style:italic;
-}
-
 form label {
     font-family:Tahoma, Geneva, sans-serif;
 }
@@ -116,14 +112,14 @@ ul, ol {
     display:inline-block;
     color:#000033;
     line-height:130%;
-    padding:5px 15px 5px 5px;
-    margin:15px 15px 15px  0; /* Added */
-    border:1px solid #3399ff;
+    padding: 5px 15px 5px 5px;
+    margin: 15px 15px 15px  0; /* Added */
+    border: 1px solid #3399ff;
 }
 
 ul li, ol li {
-    padding:5px;
-    margin-left:35px;
+    padding: 5px;
+    margin-left: 35px; /* WHY? This causes problems in some places... */
 }
 
 
@@ -154,6 +150,14 @@ h4, h5, h6 {
   color: #000;
 }
 
+blockquote {
+    background: #fbfbac;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-style: italic;
+    width: 880px;
+    padding: 15px;
+}
+
 /* Physically disables clicking on a link which LOOKS disabled. */
 a[disabled] {
   pointer-events: none;
@@ -178,7 +182,7 @@ a[disabled] {
   margin: 0;
   box-shadow: 0 5px 10px #CCC;
   width: 100%;
-  padding: .3em;
+  padding: .2em;
   min-height: 3em;
   height: auto;
 }
@@ -191,10 +195,11 @@ a[disabled] {
     background-position: 1px 2px;
     border-radius: 20px;
     background-size: 20px;
-    height: 25px;
+    height: 30px;
     /*position: relative;*/
     width: 90%;
     margin: 1em 5%;
+    padding: 5px;
 }
 
 /* Contains the page title text */
@@ -214,25 +219,25 @@ a[disabled] {
 /* Contains Nav Buttons and Dropdown Menu */
 .nav {
     float: right;
-    margin: .1% 5% .1% 2%;
+    margin: 1% 5% 1% 2%;
     vertical-align: middle;
-    /*max-width: 50%;*/
-    min-width: 300px;
+    max-width: 50%;
+    min-width: 350px;
     position: relative;
     z-index: 9999;
+    line-height: 1em;
+    font-weight: 900;
 }
 
+.bottom-nav {
 
+}
 
 /* BUTTON CLASSES */
-.arrow { /* For Buttons with arrows instead of words. */
-  font-weight: 900;
-/*  font-size: 1em;
-  border-radius: 1.5em;
-*/  margin: 1px;
-  padding: 1px;
+/* Overrides default bootstrap which conflicts with right float dropdown. */
+.btn-group > .btn {
+    float: none;
 }
-
 /* END NAV SECTION ***********************************************************/
 
 /* PAGE DROPDOWN SECTION ******************************************************/
@@ -243,11 +248,21 @@ a[disabled] {
     text-align: left;
 }
 
-.list_header {
-    margin: 2px 10px 0 10px;
+.list_header, .arrow {
+    line-height: 1em;
+    padding: 5px;
+    text-align: left;
     font-size: 10pt;
-    display: inline;
-    font-weight: bold;
+    display:  inline;
+    font-weight: 900;
+}
+
+.list_header {
+    border-radius: 0;
+}
+
+.arrow { /* For Buttons with arrows instead of words. */
+    border-radius: .5em;
 }
 
 .course_link_list {
@@ -286,8 +301,16 @@ a[disabled] {
 /* END PAGE DROPDWON SECTION *************************************************/
 
 
+.help {
+    color:#DC143C;
+    font-style:italic;
+}
+
 /* arg. not image please... */
-.center {text-align:center;margin:0 auto;}
+.center {
+    text-align: center;
+    margin: 0 auto;
+}
 
 .redFlag {
     font-size:.95em;
@@ -621,14 +644,6 @@ div.indent {
     line-height:120%;
 }
 
-blockquote {
-    background: #fbfbac;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-style: italic;
-    width: 880px;
-    padding: 15px;
-}
-
 #brainstorm p {
     margin:5px auto;
     padding:0;
@@ -857,17 +872,13 @@ blockquote {
     height: 80%;
     position: absolute;
 }
+
 /* iframe at the beginning of labs. */
 .step_frame {
     width:100%;
     height: 100%;
     display: block;
-/*    position:relative;*/
-    /*z-index:-1;*/
-
 }
-
-
 
 .run {
     background: url("../img/web/external-link.png") center right no-repeat; /* FIXME */
